[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Arvo-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameTypes/Platformer/PlatformerPresetsButton.gd" type="Script" id=2]
[ext_resource path="res://GameTypes/Platformer/PlatformerParamControls.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[node name="PlatformerParamControls" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
script = ExtResource( 3 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 917.0
margin_bottom = 493.0

[node name="HeaderHSplit" type="HSplitContainer" parent="VBox"]
margin_right = 910.0
margin_bottom = 52.0
split_offset = 200

[node name="Title" type="Label" parent="VBox/HeaderHSplit"]
margin_right = 613.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Platformer Controls"
align = 1

[node name="PresetPicker" type="OptionButton" parent="VBox/HeaderHSplit"]
margin_left = 625.0
margin_right = 910.0
margin_bottom = 52.0
text = "Presets"
script = ExtResource( 2 )

[node name="TabContainer" type="TabContainer" parent="VBox"]
margin_top = 56.0
margin_right = 910.0
margin_bottom = 486.0
size_flags_vertical = 3
tab_align = 0

[node name="Jump" type="HSplitContainer" parent="VBox/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
split_offset = 200

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/TabContainer/Jump"]
margin_right = 363.0
margin_bottom = 394.0
scroll_horizontal_enabled = false

[node name="Buttons" type="GridContainer" parent="VBox/TabContainer/Jump/ScrollContainer"]
margin_right = 363.0
margin_bottom = 192.0
size_flags_horizontal = 3
columns = 2

[node name="MaxHeightLabel" type="Label" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_top = 5.0
margin_right = 180.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Max Height"

[node name="MaxHeightInput" type="LineEdit" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_left = 184.0
margin_right = 363.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="VariableJumpLabel" type="Label" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_top = 33.0
margin_right = 180.0
margin_bottom = 47.0
text = "Is Variable"

[node name="VariableJumpCheckbox" type="CheckBox" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_left = 184.0
margin_top = 28.0
margin_right = 363.0
margin_bottom = 52.0

[node name="JumpDurationLabel" type="Label" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_top = 61.0
margin_right = 180.0
margin_bottom = 75.0
text = "Duration"

[node name="JumpDurationInput" type="LineEdit" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_left = 184.0
margin_top = 56.0
margin_right = 363.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="JumpCountLabel" type="Label" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_top = 89.0
margin_right = 180.0
margin_bottom = 103.0
text = "Midair Count"

[node name="JumpCountInput" type="LineEdit" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_left = 184.0
margin_top = 84.0
margin_right = 363.0
margin_bottom = 108.0
size_flags_horizontal = 3

[node name="AirControlLabel" type="Label" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_top = 117.0
margin_right = 180.0
margin_bottom = 131.0
text = "Has Air Control"

[node name="AirControlInput" type="CheckBox" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_left = 184.0
margin_top = 112.0
margin_right = 363.0
margin_bottom = 136.0

[node name="JumpBufferLabel" type="Label" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_top = 145.0
margin_right = 180.0
margin_bottom = 159.0
text = "Buffer Timeout"

[node name="JumpBufferInput" type="LineEdit" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_left = 184.0
margin_top = 140.0
margin_right = 363.0
margin_bottom = 164.0
size_flags_horizontal = 3

[node name="CoyoteBufferLabel" type="Label" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_top = 173.0
margin_right = 180.0
margin_bottom = 187.0
text = "Coyote Timeout"

[node name="CoyoteBufferInput" type="LineEdit" parent="VBox/TabContainer/Jump/ScrollContainer/Buttons"]
margin_left = 184.0
margin_top = 168.0
margin_right = 363.0
margin_bottom = 192.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="VBox/TabContainer/Jump"]
margin_left = 375.0
margin_right = 902.0
margin_bottom = 394.0
size_flags_horizontal = 3

[node name="Move" type="HSplitContainer" parent="VBox/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Extra" type="HSplitContainer" parent="VBox/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
